Implement feature: create account

--- a/Blockus-Client/App.xaml
+++ b/Blockus-Client/App.xaml
@@ -4,6 +4,19 @@
              xmlns:local="clr-namespace:Blockus_Client"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Colors/Colors.xaml"/>
+                <ResourceDictionary Source="Resources/Fonts/Fonts.xaml"/>
+
+                <ResourceDictionary Source="Resources/Styles/FrameStyles.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/TextBoxStyles.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/ButtonStyles.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/TextBlockStyles.xaml"/>
+
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+        
     </Application.Resources>
 </Application>
