--- a/Blockus-Client/MainWindow.xaml
+++ b/Blockus-Client/MainWindow.xaml
@@ -5,8 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Blockus_Client"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="720" Width="1280"
+        WindowStartupLocation="CenterScreen"
+        Background="{StaticResource BackgroundColor}">
+
     <Grid>
-        
+        <Image Source="Resources/Images/Blue-Ellipse.png" VerticalAlignment="Top" HorizontalAlignment="Right" Name="Image_BlueEllipse"/>
+        <Image Source="Resources/Images/Yellow-Ellipse.png" VerticalAlignment="Bottom" HorizontalAlignment="Left" Name="Image_YellowEllipse"/>
+
+        <Frame Name="Frame_Main" Style="{StaticResource Normal_Frame}"/>
     </Grid>
+    
 </Window>
