--- a/Blockus-Client/Resources/Styles/TextBlockStyles.xaml
+++ b/Blockus-Client/Resources/Styles/TextBlockStyles.xaml
@@ -1,6 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <Style x:Key="Game_Title" TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="{StaticResource Comfortaa-Bold}"/>
+        <Setter Property="FontSize" Value="38"/>
+        <Setter Property="Foreground" Value="White"/>
+    </Style>
+
     <Style x:Key="Title_Text" TargetType="TextBlock">
         <Setter Property="FontFamily" Value="{StaticResource Comfortaa-Bold}"/>
         <Setter Property="FontSize" Value="26"/>
