--- a/Blockus-Client/View/LoginPage.xaml
+++ b/Blockus-Client/View/LoginPage.xaml
@@ -9,48 +9,47 @@
       d:Background="{StaticResource BackgroundColor}"
       Title="LoginPage">
 
-    <Grid Margin="0, 15, 15, 15">
+    <Grid Margin="20">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="640"/>
-            <ColumnDefinition Width="640"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Button Grid.Column="1" Content="Crear cuenta" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0, 10, 30, 10" Style="{StaticResource Text_Button}" Click="goToNewAccountPage"/>
+        <Button Grid.Column="1" Content="Crear cuenta" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource Text_Button}" Click="goToNewAccountPage"/>
 
-        <StackPanel Grid.Column="0" VerticalAlignment="Top" Margin="15, 0, 0, 0">
-            <TextBlock Text="Blockus" Style="{StaticResource Game_Title}"/>
+        <TextBlock Text="Blockus" Style="{StaticResource Game_Title}" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+        
+        <StackPanel Grid.Column="0" VerticalAlignment="Center" Margin="30 0 50 0">
 
-            <StackPanel Orientation="Horizontal" Margin="30, 100, 0 ,0">
+            <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Iniciar " Style="{StaticResource Title_Text}"/>
                 <TextBlock Text="Sesión" Style="{StaticResource Title_Text}" Foreground="{StaticResource PrimaryColor}"/>
             </StackPanel>
 
-            <StackPanel Orientation="Vertical" Margin="30, 15, 0 , 0">
+            <StackPanel Orientation="Vertical" Margin="0 30 0 0">
                 <TextBlock Text="Nombre de usuario" Style="{StaticResource Normal_Text}"/>
                 <TextBox x:Name="txt_Username" Width="350" HorizontalAlignment="Left" Style="{StaticResource Normal_TextBox}" MaxLength="254"/>
 
-                <TextBlock Text="Contraseña" Style="{StaticResource Normal_Text}"/>
-                <PasswordBox Name="txt_Password" Width="350" HorizontalAlignment="Left" Style="{StaticResource Normal_PasswordBox}" MaxLength="100"/>
-                <Button Content="Olvide mi contrasenia" HorizontalAlignment="Left" Style="{StaticResource Text_Button}" Click="ForgotPassword"/>
-
+                <TextBlock Text="Contraseña" Style="{StaticResource Normal_Text}" Margin="0 15 0 0"/>
+                <PasswordBox Name="txt_Password" Width="350" HorizontalAlignment="Left" Style="{StaticResource Normal_PasswordBox}" MaxLength="16"/>
+                <Button Content="Olvide mi contraseña" HorizontalAlignment="Right" Style="{StaticResource Text_Button}" Click="ForgotPassword" FontSize="12"/>
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal">
-                <Button x:Name="btn_Login" Content="Iniciar sesión" Margin="30, 15, 0, 0" Click="Login" Style="{StaticResource Normal_Button}" Width="160" Height="40" HorizontalAlignment="Left"/>
-                <Button x:Name="btn_PlayAsGuest" Content="Como invitado" Margin="30, 15, 0, 0" Click="LoginAsGuest" Style="{StaticResource Border_Button}" Width="160" Height="40" HorizontalAlignment="Left"/>
+            <StackPanel Orientation="Horizontal" Margin="0 20 0 0">
+                <Button x:Name="btn_Login" Content="Iniciar sesión" Margin="0" Click="Login" Style="{StaticResource Normal_Button}" Width="167" Height="40" HorizontalAlignment="Left"/>
+                <Button x:Name="btn_PlayAsGuest" Content="Como invitado" Margin="15 0 0 0" Click="LoginAsGuest" Style="{StaticResource Border_Button}" Width="168" Height="40" HorizontalAlignment="Left"/>
             </StackPanel>
 
-            <Button Content="¿Aún no tienes cuenta? Crea una" HorizontalAlignment="Left" Margin="30, 10, 0, 0" Style="{StaticResource Text_Button}" Click="goToNewAccountPage"/>
+            <Button Content="¿Aún no tienes cuenta? Crea una" HorizontalAlignment="Left"  Style="{StaticResource Text_Button}" Click="goToNewAccountPage" Margin="0 15 0 0"/>
         </StackPanel>
 
-        <StackPanel Grid.Column="1">
-            <Viewbox>
-                <Image x:Name="imageToRotate" Source="/Resources/Images/SquareOfBlocks.png" Width="440" Height="440" Margin="10, 75, 100, 30" HorizontalAlignment="Center">
-                    <Image.RenderTransform>
-                        <RotateTransform x:Name="imageRotation" Angle="90" CenterX="220" CenterY="220"/>
-                    </Image.RenderTransform>
-                </Image>
-            </Viewbox>
-        </StackPanel>
+        <Viewbox VerticalAlignment="Center" HorizontalAlignment="Center" Margin="70" Grid.Column="1">
+            <Image x:Name="imageToRotate" Source="/Resources/Images/SquareOfBlocks.png" Width="440" Height="440" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Image.RenderTransform>
+                    <RotateTransform x:Name="imageRotation" Angle="90" CenterX="220" CenterY="220"/>
+                </Image.RenderTransform>
+            </Image>
+        </Viewbox>
+
     </Grid>
 </Page>
