--- a/Blockus-Client/View/LoginPage.xaml
+++ b/Blockus-Client/View/LoginPage.xaml
@@ -15,7 +15,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Button Grid.Column="1" Content="Crear cuenta" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource Text_Button}" Click="goToNewAccountPage"/>
+        <Button Grid.Column="1" Content="Crear cuenta" HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource Text_Button}" Click="GoToNewAccountPage"/>
 
         <TextBlock Text="Blockus" Style="{StaticResource Game_Title}" VerticalAlignment="Top" HorizontalAlignment="Left"/>
         
@@ -40,7 +40,7 @@
                 <Button x:Name="btn_PlayAsGuest" Content="Como invitado" Margin="15 0 0 0" Click="LoginAsGuest" Style="{StaticResource Border_Button}" Width="168" Height="40" HorizontalAlignment="Left"/>
             </StackPanel>
 
-            <Button Content="¿Aún no tienes cuenta? Crea una" HorizontalAlignment="Left"  Style="{StaticResource Text_Button}" Click="goToNewAccountPage" Margin="0 15 0 0"/>
+            <Button Content="¿Aún no tienes cuenta? Crea una" HorizontalAlignment="Left"  Style="{StaticResource Text_Button}" Click="GoToNewAccountPage" Margin="0 15 0 0"/>
         </StackPanel>
 
         <Viewbox VerticalAlignment="Center" HorizontalAlignment="Center" Margin="70" Grid.Column="1">
