--- a/Blockus-Client/UserControls/PlayerCard.xaml
+++ b/Blockus-Client/UserControls/PlayerCard.xaml
@@ -14,18 +14,18 @@
         </Grid.RowDefinitions>
 
        
-        <Image Source="/Resources/Images/ProfileImage-1.png" Stretch="UniformToFill" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Border BorderThickness="3" BorderBrush="{StaticResource Gray}" CornerRadius="5"/>
+        <Image Name="Image_ProfileImage" Source="/Resources/Images/ProfileImage-1.png" Stretch="UniformToFill" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Border x:Name="Border_Stroke" BorderThickness="3" BorderBrush="{StaticResource Gray}" CornerRadius="5"/>
         <Border CornerRadius="5" Height="175" VerticalAlignment="Bottom">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                     <GradientStop Color="Transparent" Offset="0"/>
-                    <GradientStop Color="Gray" Offset="1"/>
+                    <GradientStop x:Name="GradientStop_PlayerColor" Color="Gray" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
         </Border>
 
         <Border Background="#90000000" Height="45" Grid.Row="2" BorderBrush="{StaticResource PrimaryColor}" BorderThickness="0 1 0 0" CornerRadius="5"/>
-        <TextBlock Text="Esperando jugador . . ." Style="{StaticResource Normal_Text}" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <TextBlock Name="txt_Username" Text="Esperando jugador . . ." Style="{StaticResource Normal_Text}" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
     </Grid>
 </UserControl>
