--- a/Blockus-Client/App.xaml
+++ b/Blockus-Client/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="Resources/Styles/TextBoxStyles.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/ButtonStyles.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/TextBlockStyles.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/RadioButtonStyles.xaml"/>
 
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
