--- a/Blockus-Client/Resources/Styles/ButtonStyles.xaml
+++ b/Blockus-Client/Resources/Styles/ButtonStyles.xaml
@@ -1,22 +1,27 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="Lobby_Button" TargetType="Button">
-        <Setter Property="FontSize" Value="28"/>
+    <Style x:Key="Underline_Button" TargetType="Button">
+        <Setter Property="FontSize" Value="16"/>
         <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="Height" Value="65"/>
         <Setter Property="FontFamily" Value="{StaticResource Comfortaa-Bold}"/>
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="WhiteSmoke"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}" CornerRadius="5" BorderThickness="0" Cursor="Hand">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Border Background="{TemplateBinding Background}" BorderThickness="0 0 0 2" BorderBrush="{StaticResource PrimaryColor}" Cursor="Hand" Margin="15 0 0 0">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Setter Property="FontSize" Value="17"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
     
     <Style x:Key="Normal_Button" TargetType="Button">
