--- a/Blockus-Client/View/JoinMatchPage.xaml
+++ b/Blockus-Client/View/JoinMatchPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Blockus_Client.View.MatchMakingPage"
+﻿<Page x:Class="Blockus_Client.View.JoinMatchPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,24 +7,34 @@
       xmlns:UserControls="clr-namespace:Blockus_Client.UserControls"
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="1280"
-      Title="MatchMakingPage"
+      Title="JoinMatchPage"
       d:Background="{StaticResource BackgroundColor}">
 
     <Grid>
-        <Button Content="Regresar" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Text_Button}" Margin="20" Click="LeaveMatch"/>
+        <Button Content="Regresar" Click="LeaveMatch" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Text_Button}" Margin="20"/>
 
-        <Grid>
+        <StackPanel x:Name="StackPanel_Code" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock Text="Ingrese el código para poder unirse a la partida" Style="{StaticResource Subtitle_Text}"/>
+            <TextBox x:Name="TextBox_Code" Style="{StaticResource Normal_TextBox}" HorizontalContentAlignment="Center" MaxLength="6" Margin="0 30"/>
+            <Button Content="Unirse" Style="{StaticResource Normal_Button}" Width="200" Click="JoinToMatch"/>
+        </StackPanel>
+
+        <Grid x:Name="Grid_Players" Visibility="Collapsed">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
-            
+
             <!--Title and time bar-->
             <StackPanel HorizontalAlignment="Center" Margin="0 20 0 0">
                 <TextBlock Text="Blockus" Style="{StaticResource Game_Title}"/>
+                <StackPanel Orientation="Horizontal" Margin="0 5 0 5">
+                    <TextBlock Text="Tiempo restante: " Style="{StaticResource Normal_Text}"/>
+                    <TextBlock Text="1:00" Style="{StaticResource Normal_Text}" Foreground="{StaticResource PrimaryColor}"/>
+                </StackPanel>
             </StackPanel>
-            
+
             <!--Gamers profiles-->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="1" Visibility="Hidden">
                 <UserControls:PlayerCard Width="225"/>
@@ -46,7 +56,7 @@
                 <UserControls:PlayerCard x:Name="uc_CardThree" Grid.Column="2" Margin="10 0"/>
                 <UserControls:PlayerCard x:Name="uc_CardFour" Grid.Column="3" Margin="10 0"/>
             </Grid>
-            
+
             <!--Match Configuration-->
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
@@ -56,7 +66,7 @@
                 </Grid.ColumnDefinitions>
 
 
-                <Border CornerRadius="0" Grid.ColumnSpan="3">
+                <Border CornerRadius="0" VerticalAlignment="Bottom" Grid.ColumnSpan="3">
                     <Border.Background>
                         <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
                             <GradientStop Color="#80000000" Offset="0"/>
@@ -65,15 +75,6 @@
                         </LinearGradientBrush>
                     </Border.Background>
                 </Border>
-
-                <StackPanel Grid.Column="0" HorizontalAlignment="Left" Margin="20 20" VerticalAlignment="Center">
-                    <TextBlock Text="Modo de juego" Style="{StaticResource Normal_Text}"/>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0 10">
-                        <RadioButton Content="Privado" Style="{StaticResource Normal_RadioButton}" FontSize="18" IsChecked="True"/>
-                        <RadioButton Content="Público" Style="{StaticResource Normal_RadioButton}" FontSize="18" Margin="50 0 0 0" Visibility="Hidden"/>
-                    </StackPanel>
-                    <TextBlock Text="La partida se llenará solo con las personas que ingresen el código" Style="{StaticResource Normal_Text}" HorizontalAlignment="Left" Margin="0 10 0 0" TextWrapping="Wrap"/>
-                </StackPanel>
 
                 <StackPanel Grid.Column="1" HorizontalAlignment="Center" Margin="20 0" VerticalAlignment="Center">
                     <TextBlock Text="Buscando jugadores . . ." Style="{StaticResource Normal_Text}"/>
@@ -84,18 +85,8 @@
                     </StackPanel>
                 </StackPanel>
 
-                <StackPanel Grid.Column="2" HorizontalAlignment="Right" Margin="20 20" VerticalAlignment="Center">
-                    <TextBlock Text="Numero de jugadores" Style="{StaticResource Normal_Text}"/>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 10">
-                        <RadioButton Content="2" Style="{StaticResource Normal_RadioButton}" FontSize="18" Visibility="Hidden"/>
-                        <RadioButton Content="4" Style="{StaticResource Normal_RadioButton}" FontSize="18" IsChecked="True" Margin="50 0 0 0"/>
-                    </StackPanel>
-                    <TextBlock Text="Código de partida" Style="{StaticResource Normal_Text}" HorizontalAlignment="Right"/>
-                    <TextBlock Name="txt_MatchCode" Text="------" Style="{StaticResource Subtitle_Text}" Foreground="{StaticResource PrimaryColor}" HorizontalAlignment="Right" Margin="0 10 0 0"/>
-                </StackPanel>
-                
             </Grid>
-            
+
         </Grid>
     </Grid>
 </Page>
