--- a/Blockus-Client/View/LobbyPage.xaml
+++ b/Blockus-Client/View/LobbyPage.xaml
@@ -18,11 +18,11 @@
         <TextBlock Text="Blockus" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Game_Title}"/>
 
         <StackPanel Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="30, 0, 50, 0">
-            <Button x:Name="btn_CreateMatch" Content="Crear partida" Style="{StaticResource Text_Button}" Click="CreateMatch" HorizontalAlignment="Left"/>
-            <Button x:Name="btn_JoinMatch" Content="Unirse a partida" Style="{StaticResource Text_Button}" Click="JoinMatch" Margin="0 15 0 0" HorizontalAlignment="Left"/>
-            <Button x:Name="btn_Friends" Content="Mis amigos" Style="{StaticResource Text_Button}" Click="FriendList" Margin="0 15 0 0" HorizontalAlignment="Left"/>
-            <Button x:Name="btn_Config" Content="Configuracion" Style="{StaticResource Text_Button}" Click="AccountConfig" Margin="0 15 0 0" HorizontalAlignment="Left"/>
-            <Button x:Name="btn_LogOut" Content="Cerrar sesion" Style="{StaticResource Text_Button}" Click="LogOut" Margin="0 15 0 0" HorizontalAlignment="Left"/>
+            <Button x:Name="btn_CreateMatch" Content="Crear partida" Style="{StaticResource Underline_Button}" Click="CreateMatch" HorizontalAlignment="Left"/>
+            <Button x:Name="btn_JoinMatch" Content="Unirse a partida" Style="{StaticResource Underline_Button}" Click="JoinMatch" Margin="0 30 0 0" HorizontalAlignment="Left"/>
+            <Button x:Name="btn_Friends" Content="Mis amigos" Style="{StaticResource Underline_Button}" Click="FriendList" Margin="0 30 0 0" HorizontalAlignment="Left"/>
+            <Button x:Name="btn_Config" Content="Configuracion" Style="{StaticResource Underline_Button}" Click="AccountConfig" Margin="0 30 0 0" HorizontalAlignment="Left"/>
+            <Button x:Name="btn_LogOut" Content="Cerrar sesion" Style="{StaticResource Underline_Button}" Click="LogOut" Margin="0 30 0 0" HorizontalAlignment="Left"/>
         </StackPanel>
 
         <Viewbox VerticalAlignment="Center" HorizontalAlignment="Center" Margin="70" Grid.Column="1">
