--- a/Blockus-Client/View/ChangePasswordPage.xaml
+++ b/Blockus-Client/View/ChangePasswordPage.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Blockus_Client.View"
+      xmlns:p="clr-namespace:Blockus_Client.Properties"
       mc:Ignorable="d"
       d:DesignHeight="720" d:DesignWidth="1280"
       d:Background="{StaticResource BackgroundColor}"
@@ -25,7 +26,7 @@
 
         <StackPanel Grid.Column="1" VerticalAlignment="Center" Margin="15, 0, 0, 0">
             <StackPanel Orientation="Horizontal" Margin="0, 0, 0, 30">
-                <TextBlock Text="Cambia tu contraseña" Style="{StaticResource Title_Text}"/>
+                <TextBlock Text="{x:Static p:Resources.Configuration_modifyPassword}" Style="{StaticResource Title_Text}"/>
             </StackPanel>
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -35,23 +36,23 @@
                 </Grid.ColumnDefinitions>
 
                 <StackPanel>
-                    <TextBlock Text="Contraseña actual: " Style="{StaticResource Normal_Text}"/>
+                    <TextBlock Text="{x:Static p:Resources.ModifyPassword_actualPassword}" Style="{StaticResource Normal_Text}"/>
                     <PasswordBox Name="txt_Password"  Width="300" HorizontalAlignment="Left" Style="{StaticResource Normal_PasswordBox}" MaxLength="16"/>
                 </StackPanel>
 
                 <StackPanel Grid.Column="2">
-                    <TextBlock Text="Ingresa tu nueva contraseña: " Style="{StaticResource Normal_Text}"/>
+                    <TextBlock Text="{x:Static p:Resources.ModifyPassword_newPassword}" Style="{StaticResource Normal_Text}"/>
                     <PasswordBox x:Name="txt_NewPassword" Width="300" HorizontalAlignment="Left" Style="{StaticResource Normal_PasswordBox}" MaxLength="16"/>
                 </StackPanel>
 
             </Grid>
 
             <StackPanel Orientation="Horizontal">
-                <Button Name="btn_Continue" Content="Continuar" Margin="0 10 0 0" Style="{StaticResource Normal_Button}" Width="150" Click="UpdateAccountPassword"/>
-                <Button x:Name="btn_Cancel" Content="Cancelar" Margin="50, 10, 0, 0" Style="{StaticResource Border_Button}" Width="150" Click="GoToProfilePage"/>
+                <Button Name="btn_Continue" Content="{x:Static p:Resources.Global_continueButton}" Margin="0 10 0 0" Style="{StaticResource Normal_Button}" Width="150" Click="UpdateAccountPassword"/>
+                <Button x:Name="btn_Cancel" Content="{x:Static p:Resources.Global_cancelButton}" Margin="50, 10, 0, 0" Style="{StaticResource Border_Button}" Width="150" Click="GoToProfilePage"/>
             </StackPanel>
 
-            <TextBlock Style="{StaticResource Normal_Text}" TextWrapping="Wrap" Margin="0, 40, 0, 0" MaxWidth="600" Text="NOTA: Una vez modificada tu contraseña se pedira que inicies sesion nuevamente con la contraseña actualizada!"/>
+            <TextBlock Style="{StaticResource Normal_Text}" TextWrapping="Wrap" Margin="0, 40, 0, 0" MaxWidth="600" Text="{x:Static p:Resources.ModifyPassword_note}"/>
         </StackPanel>
 
     </Grid>
