--- a/Blockus-Client/View/LobbyPage.xaml
+++ b/Blockus-Client/View/LobbyPage.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Blockus_Client.View"
+      xmlns:p="clr-namespace:Blockus_Client.Properties"
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="1280"
       d:Background="{StaticResource BackgroundColor}"
@@ -15,14 +16,14 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Text="Blockus" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Game_Title}"/>
+        <TextBlock Text="{x:Static p:Resources.Global_gameName}" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Game_Title}"/>
 
         <StackPanel Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="30, 0, 50, 0">
-            <Button x:Name="btn_CreateMatch" Content="Crear partida" Style="{StaticResource Underline_Button}" Click="CreateMatch" HorizontalAlignment="Left"/>
-            <Button x:Name="btn_JoinMatch" Content="Unirse a partida" Style="{StaticResource Underline_Button}" Click="JoinMatch" Margin="0 30 0 0" HorizontalAlignment="Left"/>
-            <Button x:Name="btn_Friends" Content="Mis amigos" Style="{StaticResource Underline_Button}" Click="FriendList" Margin="0 30 0 0" HorizontalAlignment="Left"/>
-            <Button x:Name="btn_Config" Content="Configuracion" Style="{StaticResource Underline_Button}" Click="AccountConfig" Margin="0 30 0 0" HorizontalAlignment="Left"/>
-            <Button x:Name="btn_LogOut" Content="Cerrar sesion" Style="{StaticResource Underline_Button}" Click="LogOut" Margin="0 30 0 0" HorizontalAlignment="Left"/>
+            <Button x:Name="btn_CreateMatch" Content="{x:Static p:Resources.Lobby_createMatch}" Style="{StaticResource Underline_Button}" Click="CreateMatch" HorizontalAlignment="Left"/>
+            <Button x:Name="btn_JoinMatch" Content="{x:Static p:Resources.Lobby_joinMatch}" Style="{StaticResource Underline_Button}" Click="JoinMatch" Margin="0 30 0 0" HorizontalAlignment="Left"/>
+            <Button x:Name="btn_Friends" Content="{x:Static p:Resources.Lobby_Friends}" Style="{StaticResource Underline_Button}" Click="FriendList" Margin="0 30 0 0" HorizontalAlignment="Left"/>
+            <Button x:Name="btn_Config" Content="{x:Static p:Resources.Lobby_Configuration}" Style="{StaticResource Underline_Button}" Click="AccountConfig" Margin="0 30 0 0" HorizontalAlignment="Left"/>
+            <Button x:Name="btn_LogOut" Content="{x:Static p:Resources.Lobby_logout}" Style="{StaticResource Underline_Button}" Click="LogOut" Margin="0 30 0 0" HorizontalAlignment="Left"/>
         </StackPanel>
 
         <Viewbox VerticalAlignment="Center" HorizontalAlignment="Center" Margin="70" Grid.Column="1">
