--- a/Blockus-Client/UserControls/PlayerCard.xaml
+++ b/Blockus-Client/UserControls/PlayerCard.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Blockus_Client.UserControls"
+             xmlns:p="clr-namespace:Blockus_Client.Properties"
              mc:Ignorable="d" 
              d:DesignWidth="265">
     <Grid Margin="20 20 20 20">
@@ -26,6 +27,6 @@
         </Border>
 
         <Border Background="#90000000" Height="45" Grid.Row="2" BorderBrush="{StaticResource PrimaryColor}" BorderThickness="0 1 0 0" CornerRadius="5"/>
-        <TextBlock Name="txt_Username" Text="Esperando jugador . . ." Style="{StaticResource Normal_Text}" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <TextBlock Name="txt_Username" Text="{x:Static p:Resources.PlayerCard}" Style="{StaticResource Normal_Text}" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
     </Grid>
 </UserControl>
