--- a/Blockus-Client/View/AccountFriendsPage.xaml
+++ b/Blockus-Client/View/AccountFriendsPage.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Blockus_Client.View"
       xmlns:UserControls="clr-namespace:Blockus_Client.UserControls"
+      xmlns:p="clr-namespace:Blockus_Client.Properties"
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="1280"
       d:Background="{StaticResource BackgroundColor}"
@@ -12,7 +13,7 @@
 
     <Grid Margin="0,15,15,15">
         <StackPanel>
-            <Button x:Name="back" Content="Volver" HorizontalAlignment="Left" Margin="15,10,0,0" 
+            <Button x:Name="back" Content="{x:Static p:Resources.Global_back}" HorizontalAlignment="Left" Margin="15,10,0,0" 
                     Style="{StaticResource Text_Button}" Click="GoToLobbyPage"/>
         </StackPanel>
         
@@ -27,8 +28,8 @@
 
             <StackPanel Grid.Column="1" Margin="10,40, 0, 10" x:Name="StackPanel_AddFriends">
                 <StackPanel Orientation="Horizontal" Margin="10, 15, 10, 10">
-                    <TextBox x:Name="txt_searchFriends" Text="Busca un usuario" Width="450"  Height="60" Style="{StaticResource Normal_TextBox}"/>
-                    <Button x:Name="btn_Search" Content="Buscar" Margin="25, -10, 0, 0" Width="100" Height="60" Style="{StaticResource Normal_Button}" Click="searchUser"/>
+                    <TextBox x:Name="txt_searchFriends" Text="{x:Static p:Resources.Friends_searchUser}" Width="450"  Height="60" Style="{StaticResource Normal_TextBox}"/>
+                    <Button x:Name="btn_Search" Content="{x:Static p:Resources.Friends_search}" Margin="25, -10, 0, 0" Width="100" Height="60" Style="{StaticResource Normal_Button}" Click="searchUser"/>
                 </StackPanel>
             </StackPanel>
         </Grid>
