--- a/Blockus-Client/View/MatchMakingPage.xaml
+++ b/Blockus-Client/View/MatchMakingPage.xaml
@@ -5,13 +5,14 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Blockus_Client.View"
       xmlns:UserControls="clr-namespace:Blockus_Client.UserControls"
+      xmlns:p="clr-namespace:Blockus_Client.Properties"
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="1280"
       Title="MatchMakingPage"
       d:Background="{StaticResource BackgroundColor}">
 
     <Grid>
-        <Button Content="Regresar" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Text_Button}" Margin="20" Click="LeaveMatch"/>
+        <Button Content="{x:Static p:Resources.Global_back}" HorizontalAlignment="Left" VerticalAlignment="Top" Style="{StaticResource Text_Button}" Margin="20" Click="LeaveMatch"/>
 
         <Grid>
             <Grid.RowDefinitions>
@@ -22,7 +23,7 @@
             
             <!--Title and time bar-->
             <StackPanel HorizontalAlignment="Center" Margin="0 20 0 0">
-                <TextBlock Text="Blockus" Style="{StaticResource Game_Title}"/>
+                <TextBlock Text="{x:Static p:Resources.Global_gameName}" Style="{StaticResource Game_Title}"/>
             </StackPanel>
             
             <!--Gamers profiles-->
@@ -67,16 +68,16 @@
                 </Border>
 
                 <StackPanel Grid.Column="0" HorizontalAlignment="Left" Margin="20 20" VerticalAlignment="Center">
-                    <TextBlock Text="Modo de juego" Style="{StaticResource Normal_Text}"/>
+                    <TextBlock Text="{x:Static p:Resources.MatchDetails_gameMode}" Style="{StaticResource Normal_Text}"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0 10">
-                        <RadioButton Content="Privado" Style="{StaticResource Normal_RadioButton}" FontSize="18" IsChecked="True"/>
-                        <RadioButton Content="Público" Style="{StaticResource Normal_RadioButton}" FontSize="18" Margin="50 0 0 0" Visibility="Hidden"/>
+                        <RadioButton Content="{x:Static p:Resources.MatchDetails_private}" Style="{StaticResource Normal_RadioButton}" FontSize="18" IsChecked="True"/>
+                        <RadioButton Content="{x:Static p:Resources.MatchDetails_public}" Style="{StaticResource Normal_RadioButton}" FontSize="18" Margin="50 0 0 0" Visibility="Hidden"/>
                     </StackPanel>
-                    <TextBlock Text="La partida se llenará solo con las personas que ingresen el código" Style="{StaticResource Normal_Text}" HorizontalAlignment="Left" Margin="0 10 0 0" TextWrapping="Wrap"/>
+                    <TextBlock Text="{x:Static p:Resources.MatchDetails_note}" Style="{StaticResource Normal_Text}" HorizontalAlignment="Left" Margin="0 10 0 0" TextWrapping="Wrap"/>
                 </StackPanel>
 
                 <StackPanel Grid.Column="1" HorizontalAlignment="Center" Margin="20 0" VerticalAlignment="Center">
-                    <TextBlock Text="Buscando jugadores . . ." Style="{StaticResource Normal_Text}"/>
+                    <TextBlock Text="{x:Static p:Resources.MatchDetails_searchingPlayers}" Style="{StaticResource Normal_Text}"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 10">
                         <TextBlock x:Name="txt_Players" Text="0" Style="{StaticResource Subtitle_Text}"/>
                         <TextBlock Text="/" Style="{StaticResource Subtitle_Text}"/>
@@ -85,12 +86,12 @@
                 </StackPanel>
 
                 <StackPanel Grid.Column="2" HorizontalAlignment="Right" Margin="20 20" VerticalAlignment="Center">
-                    <TextBlock Text="Numero de jugadores" Style="{StaticResource Normal_Text}"/>
+                    <TextBlock Text="{x:Static p:Resources.MatchDetails_noPlayers}" Style="{StaticResource Normal_Text}"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 10">
                         <RadioButton Content="2" Style="{StaticResource Normal_RadioButton}" FontSize="18" Visibility="Hidden"/>
                         <RadioButton Content="4" Style="{StaticResource Normal_RadioButton}" FontSize="18" IsChecked="True" Margin="50 0 0 0"/>
                     </StackPanel>
-                    <TextBlock Text="Código de partida" Style="{StaticResource Normal_Text}" HorizontalAlignment="Right"/>
+                    <TextBlock Text="{x:Static p:Resources.MatchDetails_matchCode}" Style="{StaticResource Normal_Text}" HorizontalAlignment="Right"/>
                     <TextBlock Name="txt_MatchCode" Text="------" Style="{StaticResource Subtitle_Text}" Foreground="{StaticResource PrimaryColor}" HorizontalAlignment="Right" Margin="0 10 0 0"/>
                 </StackPanel>
                 
