--- a/Blockus-Client/View/ProfileConfigurationPage.xaml
+++ b/Blockus-Client/View/ProfileConfigurationPage.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Blockus_Client.View"
+      xmlns:p="clr-namespace:Blockus_Client.Properties"
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="1280"
       d:Background="{StaticResource BackgroundColor}"
@@ -16,42 +17,42 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel Orientation="Vertical" Grid.Row="0">
-            <Button x:Name="back" Content="Volver" HorizontalAlignment="Left" Margin="15, 10, 0, 0" Style="{StaticResource Text_Button}" Click="GoToLobbyPage"/>
+            <Button x:Name="back" Content="{x:Static p:Resources.Global_back}" HorizontalAlignment="Left" Margin="15, 10, 0, 0" Style="{StaticResource Text_Button}" Click="GoToLobbyPage"/>
 
             <Viewbox>
                 <Image x:Name="AccountPicture" Source="/Resources/Images/ProfileImage-1.png" Width="32" Height="32" Margin="15, 15, 15, 15"/>
             </Viewbox>
 
-            <TextBlock x:Name="txt_Username" Text="USERNAME_PLACEHOLDER" HorizontalAlignment="Center" Margin="0, 0, 15, 15" Style="{StaticResource Normal_Text}"/>
-            <TextBlock x:Name="txt_Email" Text="EMAIL_PLACEHOLDER" HorizontalAlignment="Center" Margin="0, 20, 15, 15" Style="{StaticResource Normal_Text}"/>
+            <TextBlock x:Name="txt_Username" Text="{x:Static p:Resources.Global_username}" HorizontalAlignment="Center" Margin="0, 0, 15, 15" Style="{StaticResource Normal_Text}"/>
+            <TextBlock x:Name="txt_Email" Text="{x:Static p:Resources.Register_email}" HorizontalAlignment="Center" Margin="0, 20, 15, 15" Style="{StaticResource Normal_Text}"/>
             <TextBlock Text="Stats:" HorizontalAlignment="Center" Margin="0, 30, 15, 15" Style="{StaticResource Title_Text}"/>
 
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="VICTORIES: " HorizontalAlignment="Left" Margin="10, 5, 15, 15" Style="{StaticResource Normal_Text}"/>
+                <TextBlock Text="{x:Static p:Resources.Configuration_victories}" HorizontalAlignment="Left" Margin="10, 5, 15, 15" Style="{StaticResource Normal_Text}"/>
                 <TextBlock x:Name="txt_Victories" Text="N/A" HorizontalAlignment="Left" Margin="0, 5, 15, 15" Style="{StaticResource Normal_Text}"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="LOSES: " HorizontalAlignment="Left" Margin="10, 5, 15, 15" Style="{StaticResource Normal_Text}"/>
+                <TextBlock Text="{x:Static p:Resources.Configuration_loses}" HorizontalAlignment="Left" Margin="10, 5, 15, 15" Style="{StaticResource Normal_Text}"/>
                 <TextBlock x:Name="txt_Losses" Text="N/A" HorizontalAlignment="Left" Margin="0, 5, 15, 15" Style="{StaticResource Normal_Text}"/>
             </StackPanel>
 
             <TextBlock/>
         </StackPanel>
 
-        <TextBlock Grid.Column="1" Text="AJUSTES" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 15, 0, 0" Style="{StaticResource Title_Text}"/>
+        <TextBlock Grid.Column="1" Text="{x:Static p:Resources.Configuration_Settings}" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0, 15, 0, 0" Style="{StaticResource Title_Text}"/>
 
         <StackPanel Grid.Column="1" Margin="30, 50, 75, 500" Orientation="Vertical">
-            <TextBlock Text="Contraseña" Style="{StaticResource Title_Text}" Foreground="DimGray"/>
-            <TextBlock Text="Change your password" HorizontalAlignment="Left" Margin="10, 15, 0, 0" Width="650" Style="{StaticResource Title_Text}"/>
-            <Button x:Name="btn_ChangePassword" Content="CAMBIAR" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="30, -30, 10, 10" Style="{StaticResource Border_Button}" Click="GoToChangePassword" />
+            <TextBlock Text="{x:Static p:Resources.Global_password}" Style="{StaticResource Title_Text}" Foreground="DimGray"/>
+            <TextBlock Text="{x:Static p:Resources.Configuration_modifyPassword}" HorizontalAlignment="Left" Margin="10, 15, 0, 0" Width="650" Style="{StaticResource Title_Text}"/>
+            <Button x:Name="btn_ChangePassword" Content="{x:Static p:Resources.Global_continueButton}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="30, -30, 10, 10" Style="{StaticResource Border_Button}" Click="GoToChangePassword" />
         </StackPanel>
 
         <StackPanel Orientation="Vertical" Grid.Column="1" Margin="30, 290, 510, 15">
             <Viewbox Width="200" Height="200">
                 <Image x:Name="BoardStyle" Source="/Resources/Images/SquareofBlocks.png" Width="64" Height="64" Margin="0, 0, 0, 0"/>
             </Viewbox>
-            <TextBlock Text="Estilo de tablero" HorizontalAlignment="Center"  Margin="10, 10, 0, 10" Style="{StaticResource Subtitle_Text}"/>
+            <TextBlock Text="{x:Static p:Resources.Configuration_boardStyle}" HorizontalAlignment="Center"  Margin="10, 10, 0, 10" Style="{StaticResource Subtitle_Text}"/>
             <ComboBox x:Name="cb_EstilosTablero" SelectionChanged="ChangeBoardStyle" />
         </StackPanel>
 
@@ -59,7 +60,7 @@
             <Viewbox Width="200" Height="200">
                 <Image x:Name="TileStyle" Source="/Resources/Images/SquareofBlocks.png" Width="64" Height="64" Margin="0, 0, 0, 0"/>
             </Viewbox>
-            <TextBlock Text="Estilo de piezas" HorizontalAlignment="Center"  Margin="10, 10, 0, 10" Style="{StaticResource Subtitle_Text}"/>
+            <TextBlock Text="{x:Static p:Resources.Configuration_TilesStyle}" HorizontalAlignment="Center"  Margin="10, 10, 0, 10" Style="{StaticResource Subtitle_Text}"/>
             <ComboBox x:Name="cb_EstilosPiezas" SelectionChanged="ChangeTilesStyle" />
         </StackPanel>
     </Grid>
